# ClingScriptingProvider

./: CMakeLists.txt  ClingScriptingProvider.cpp  ClingScriptingProvider.h  README.md  library.cpp
patches/cling/: cling-5829172-Allow setting cling__outs and cling__errs.patch
